--- a/equipped/index.html
+++ b/equipped/index.html
@@ -16,13 +16,13 @@
 
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="https://wil.to/equipped/images/card.gif">
-    <meta name="twitter:image" content="https://wil.to/equipped/images/card.gif">
+    <meta property="og:image" content="https://wil.to/equipped/images/card.png">
+    <meta name="twitter:image" content="https://wil.to/equipped/images/card.png">
     <meta property="og:image:alt" content="GET EQUIPPED">
     <meta name="twitter:image:alt" content="GET EQUIPPED">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/equipped/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/equipped/images/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/equipped/images/favicons/favicon-32x32.gif">
+    <link rel="icon" type="image/png" sizes="16x16" href="/equipped/images/favicons/favicon-16x16.gif">
     <link rel="shortcut icon" href="/equipped/images/favicons/favicon.ico">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="/browserconfig.xml">
