--- a/equipped/index.html
+++ b/equipped/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GET EQUIPPED</title>
+    <title>GET EQUIPPED WITH CHARITY STREAM</title>
     <link rel="canonical" href="https://wil.to/equipped/">
 
     <meta property="og:site_name" content="GET EQUIPPED">
@@ -18,8 +18,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:image" content="https://wil.to/equipped/images/card.png">
     <meta name="twitter:image" content="https://wil.to/equipped/images/card.png">
-    <meta property="og:image:alt" content="GET EQUIPPED">
-    <meta name="twitter:image:alt" content="GET EQUIPPED">
+    <meta property="og:image:alt" content="GET EQUIPPED WITH CHARITY STREAM">
+    <meta name="twitter:image:alt" content="GET EQUIPPED WITH CHARITY STREAM">
 
     <link rel="icon" type="image/png" sizes="32x32" href="/equipped/images/favicons/favicon-32x32.gif">
     <link rel="icon" type="image/png" sizes="16x16" href="/equipped/images/favicons/favicon-16x16.gif">
