--- a/equipped/index.html
+++ b/equipped/index.html
@@ -51,7 +51,7 @@
             <li>$1 more for every $100 donated</li>
             <li>Up to $25 per death</li>
           </ul>
-          <p><a href="https://www.twitch.tv/wiltostreams">Get your weapons ready!!</a></p>
+          <p><a href="https://www.twitch.tv/wiltostreams">Get your weapons ready!</a></p>
         </div>
       </div>
     </main>
