--- a/megamanathon/index.html
+++ b/megamanathon/index.html
@@ -13,7 +13,7 @@
     <meta property="og:site_name" content="GET EQUIPPED WITH CHARITY STREAM">
     <meta property="og:title" content="GET EQUIPPED WITH CHARITY STREAM">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="GET YOUR WALLETS READY!">
+    <meta property="og:description" content="GET YOUR WALLETS READY!">
     <meta property="og:url" content="https://wil.to/megamanathon/">
 
     <meta name="twitter:card" content="summary_large_image">
