Nobody saw that.

--- a/megamanathon/index.html
+++ b/megamanathon/index.html
@@ -22,9 +22,9 @@
     <meta property="og:image:alt" content="Get equipped with charity stream">
     <meta name="twitter:image:alt" content="Get equipped with charity stream">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" href="./images/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/mm.gif">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/mm.gif">
+    <link rel="shortcut icon" href="./images/favicons/mm.gif">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="/browserconfig.xml">
     <meta name="theme-color" content="#4c9cff">
