--- a/megamanathon/index.html
+++ b/megamanathon/index.html
@@ -34,7 +34,7 @@
   <body>
     <a class="w-logo" href="https://wil.to">
       <svg aria-hidden="true" viewBox="0 0 210 210" width="150" height="150" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <defs><path id="path" d="M.412.353h206.647V207H.412z"></path></defs><g fill="none" fill-rule="evenodd"><mask id="path2" fill="#fff"><use xlink:href="#path"></use></mask><path d="M207.059 103.677c0 57.063-46.26 103.323-103.323 103.323C46.672 207 .412 160.74.412 103.677.412 46.613 46.672.353 103.736.353s103.323 46.26 103.323 103.324" fill="#12073F" mask="url(#path2)"></path><path fill="#eee0a2" d="M101.405 77.63H80.878L93.36 99.657l-5.579 9.812L69.614 77.63H49.087l38.578 68.359.08-.137.077.137 15.845-28.141 15.947 28.141 10.38-18.255z"></path><path fill="var(--color-secondary)" d="M137.823 77.647L125.55 99.23h20.65l12.183-21.425z"></path></g>
+        <defs><path id="path" d="M.412.353h206.647V207H.412z"></path></defs><g fill="none" fill-rule="evenodd"><mask id="path2" fill="#fff"><use xlink:href="#path"></use></mask><path d="M207.059 103.677c0 57.063-46.26 103.323-103.323 103.323C46.672 207 .412 160.74.412 103.677.412 46.613 46.672.353 103.736.353s103.323 46.26 103.323 103.324" fill="#000" mask="url(#path2)"></path><path fill="#fff" d="M101.405 77.63H80.878L93.36 99.657l-5.579 9.812L69.614 77.63H49.087l38.578 68.359.08-.137.077.137 15.845-28.141 15.947 28.141 10.38-18.255z"></path><path fill="var(--color-secondary)" d="M137.823 77.647L125.55 99.23h20.65l12.183-21.425z"></path></g>
       </svg>
       <span class="visually-hidden">Wilto</span>
     </a>
