GET YOUR WEAPONS READY

--- a/megamanathon/design-system/component-preview/button/badge/index.html
+++ b/megamanathon/design-system/component-preview/button/badge/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?f249-5c85-e4de">
+    <link rel="stylesheet" href="/css/global.css?8ab7-9c4d-f806">
     <style>
       /* Extra padding for theme toggle */
       body {
