--- a/megamanathon/design-system/component-preview/button/reversed/index.html
+++ b/megamanathon/design-system/component-preview/button/reversed/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?ee94-ee28-27f8">
+    <link rel="stylesheet" href="/css/global.css?e3d4-3a83-e87d">
     <style>
       /* Extra padding for theme toggle */
       body {
