--- a/megamanathon/design-system/component-preview/button/secondary/index.html
+++ b/megamanathon/design-system/component-preview/button/secondary/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?c100-10d6-898e">
+    <link rel="stylesheet" href="/css/global.css?ea6d-232a-c58b">
     <style>
       /* Extra padding for theme toggle */
       body {
