--- a/megamanathon/design-system/component-preview/button/tertiary/index.html
+++ b/megamanathon/design-system/component-preview/button/tertiary/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?eece-ee4c-dce1">
+    <link rel="stylesheet" href="/css/global.css?e223-0271-353f">
     <style>
       /* Extra padding for theme toggle */
       body {
