--- a/megamanathon/design-system/component-preview/button/icon/index.html
+++ b/megamanathon/design-system/component-preview/button/icon/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?ca3a-4c8b-5612">
+    <link rel="stylesheet" href="/css/global.css?0eb0-fb8a-3b25">
     <style>
       /* Extra padding for theme toggle */
       body {
