--- a/megamanathon/design-system/component-preview/button/index.html
+++ b/megamanathon/design-system/component-preview/button/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?dc59-7a05-72b3">
+    <link rel="stylesheet" href="/css/global.css?3192-baba-49f0">
     <style>
       /* Extra padding for theme toggle */
       body {
