--- a/megamanathon/design-system/component-preview/button/inverted/index.html
+++ b/megamanathon/design-system/component-preview/button/inverted/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?3196-03ff-970a">
+    <link rel="stylesheet" href="/css/global.css?02c3-e2d6-43ca">
     <style>
       /* Extra padding for theme toggle */
       body {
