--- a/megamanathon/design-system/component-preview/collapsible/index.html
+++ b/megamanathon/design-system/component-preview/collapsible/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/global.css?70ca-bfcc-bfc1">
+    <link rel="stylesheet" href="/css/global.css?71e5-d964-7898">
     <style>
       /* Extra padding for theme toggle */
       body {
